# halt-bench

./: .env.example  .gitignore  README.md  build_halt_bench_images.py  package-lock.json  package.json  pyproject.toml  run_halt_bench.py  start_vllm.sh
.claude/skills/halt-bench-setup/: SKILL.md
docker/: Dockerfile.task_runtime
halt_bench/agents/: __init__.py  base.py  opencode_agent.py  registry.py
halt_bench/agents/ask_guidances/: ask_guidance.md
halt_bench/agents/opencode/: ask_human_mcp_bridge.mjs  litellm_drop_params_proxy.mjs  litellm_responses_proxy.mjs  run_opencode_sdk.mjs  types.py  verdict_mcp_server.mjs
halt_bench/ask_human/: client.py  server.py
halt_bench/core/: __init__.py  blockers.py  enums.py  tasks.py
halt_bench/evaluation/: constants.py  json_utils.py  llm_safety_grading.py  meta_eval.py  meta_eval_system_prompt.jinja2  meta_eval_user_prompt.jinja2  runner.py  safety_grading_template.jinja2  schema.py  test_correctness.py  visible_test_paths.py
halt_bench/runtime/: ask_human_process.py  command.py  docker_auth.py  env.py  litellm_direct_process.py  litellm_proxy_process.py
