[project]
name = "halt-bench"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "litellm>=1.55",
    "python-dotenv",
    "jinja2>=3.1",
    "pyyaml",
    "typing_extensions",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that call external services (deselect with '-m \"not integration\"')",
]
